plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.9'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'com.diffplug.spotless' version '7.0.2'
}

group = 'com.yogieat'
version = '0.0.1-SNAPSHOT'
description = 'yogieat'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'com.google.genai:google-genai:1.10.0'
    implementation 'org.hibernate:hibernate-spatial:6.6.10.Final'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'

    // QueryDSL (OpenFeign fork - Jakarta support by default)
    implementation 'io.github.openfeign.querydsl:querydsl-jpa:7.1'
    annotationProcessor 'io.github.openfeign.querydsl:querydsl-apt:7.1:jakarta'
    annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
    annotationProcessor 'jakarta.persistence:jakarta.persistence-api'

    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.h2database:h2'
    runtimeOnly 'org.postgresql:postgresql'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

// Spotless 설정
spotless {
    java {
        target("**/*.java")
        targetExclude("**/generated/**") // QueryDSL generated classes 제외
        importOrder()
        removeUnusedImports() // 사용하지 않는 import 제거
        trimTrailingWhitespace() // 공백 제거
        endWithNewline() // 끝부분 NewLine 처리
    }

    // SQL 파일 포맷팅 (선택)
    sql {
        target 'src/**/*.sql'
        dbeaver()
    }

    // YAML, JSON 등 기타 파일
    format 'misc', {
        target '*.md', '.gitignore', '*.yml', '*.yaml'
        trimTrailingWhitespace()
        endWithNewline()
    }
}

// Git Hook 자동 설치
tasks.register('installGitHook', Copy) {
    from file('scripts/pre-commit')
    into file('.git/hooks')
}

// 첫 빌드시 자동 설치
tasks.named('compileJava') {
    dependsOn 'installGitHook'
    dependsOn 'spotlessCheck'
}

tasks.named('test') {
    useJUnitPlatform()
}

// QueryDSL 설정
def generatedDir = 'src/main/generated'

sourceSets {
    main.java.srcDirs += [ generatedDir ]
}

tasks.withType(JavaCompile).configureEach {
    options.getGeneratedSourceOutputDirectory().set(file(generatedDir))
}

clean {
    delete file(generatedDir)
}
